<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lobster"
        android:hint="@string/et_login"
        android:includeFontPadding="false"
        android:inputType="text"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/lobster"
        android:hint="@string/et_email"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:onClick="click"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:onClick="click"
            android:text="@string/btn_confirm"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>